# tokenmoth

./: .dockerignore  .gitignore  AUDIT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  amplify.yml  docker-compose.yml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  gitleaks.yml  release.yml
aws/: cofounder-illumine-iam-policy.json
backend/: .env.example  Cargo.toml  seed.sql
backend/crates/api/: Cargo.toml
backend/crates/api/src/: main.rs
backend/crates/cli/: Cargo.toml
backend/crates/cli/src/: main.rs
backend/migrations/: 0001_init.sql  0002_api_key_ids.sql  0003_users_supabase.sql  0004_hook_overhead.sql  0005_hook_breakdown.sql  0006_mcp_servers.sql  0007_cost_anatomy.sql  0008_model_usage.sql  0009_telemetry_source.sql  0010_user_budget.sql  0011_billing.sql  0012_dashboard_indexes.sql  0013_hash_api_keys.sql  0014_normalize_repo_names.sql  0015_repo_aliases.sql
docs/: RUNBOOK.md  motion.md
docs/legal/: README.md  anwalt-briefing.md  subprozessoren.md  vvt.md
frontend/: .env.example  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx  template.tsx
frontend/components/: AnnotatedChart.tsx  BackfillCommand.tsx  BudgetBanner.tsx  BudgetSetting.tsx  ChartCanvas.tsx  ConsentBanner.tsx  CookieSettingsLink.tsx  CopyIconButton.tsx  CostAnatomy.tsx  CostChart.tsx  DangerZone.tsx  Footer.tsx  GroupControls.tsx  HookBreakdown.tsx  KeyManager.tsx  Landing.tsx  LegalShell.tsx  MethodSelect.tsx  ModelBreakdown.tsx  MothLogo.tsx  OnboardingFlow.tsx  Optimizer.tsx  OsSelect.tsx  PlanBilling.tsx  PlanBudget.tsx  PlanSelect.tsx  PostHogProvider.tsx  ReloadButton.tsx  RepoBreaker.tsx  RepoList.tsx  RevealOnView.tsx  RoiBadge.tsx  SessionList.tsx  ThemeToggle.tsx  TimezoneCookie.tsx  TopRail.tsx  WindowSelect.tsx
frontend/lib/: consent.ts  data.ts  i18n.ts  install.ts  legal.ts  tz.ts  ui.ts  (+1 more)
npm/: .npmignore  LICENSE  README.md  install.js  package.json
scripts/: README.md  db-dump.sh  db-restore.sh  deploy-aws.sh  deploy-lambda.sh  encode-demo.sh  install-release.sh  install.ps1  install.sh  publish-installers.sh  record-demo.mjs
(+28 files in other folders)
