[package]
name = "tokenrat-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tokenrat-api"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "macros",
    "migrate",
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
