[package]
name = "tokenmoth-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "tokenmoth-api"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "macros",
    "migrate",
    "json",
] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lambda_http = { version = "0.13", optional = true }

[features]
# Build the AWS Lambda entrypoint instead of the long-running HTTP server.
lambda = ["dep:lambda_http"]
